--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
 		<!-- PORTFOLIO -->
 
 
-		<section id="photography">
+		<section id="Photography">
 			<h2>food | still life</h2>
 				<img src="img/feb24_03.jpg"alt="food6">
 				<p> Pieces, Still Life</p>
@@ -175,12 +175,12 @@
 			<h2>animation</h2>
 		
 			<video width="800" height="500"  muted autoplay controls="hovered">
-				<source src="Vid/mountain.mp4" type="video/mp4"></video>
+				<source src="vid/mountain.mp4" type="video/mp4"></video>
 					<p> Mountain Animation</p>
 				
 		
 			<video width="800" height="500"  muted autoplay controls="hovered">
-				<source src="Vid/ZMLOGO_1.mp4" type="video/mp4">
+				<source src="vid/ZMLOGO_1.mp4" type="video/mp4">
 				</video>
 				<p> Logo Animation</p>
 			
@@ -190,7 +190,7 @@
 
 			<div class="grid">
 				<video width="1500" height="900"  muted autoplay controls="hovered">
-				<source src="Vid/zalban_final.mp4" type="video/mp4">
+				<source src="vid/zalban_final.mp4" type="video/mp4">
 				</video>
 				<p> Casino Title Sequence</p>
 			</div>
