--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!-- PERSONAL SITE -->
 <!DOCTYPE html>
 <head>
+
 	<title>ZM IMAGERY</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="styles.css" rel="stylesheet">
@@ -44,7 +45,15 @@
 
 				<div class="column text-left">
 					<h1>hello</h1>
-					<p1> <br>My name is Nicole.<br> I am a freelance image maker in Niagara, Ontario. My passion for image making began when I was very young. My passion is image making and capturing special moments! <br> I have acquired a BFA in Fine Art Photography & an AdvancedCertificate in Graphic Design. <br>Thank you for visiting my page and I look forward to capturing beautiful memories with you!</p1>
+					<p1> <br>My name is Nicole.<br>
+
+I am a freelance image maker living in the Niagara Region of Ontario Canada.
+
+My passion for image making and capturing special moments began at an early age and I have since acquired a Bachelor of Fine Arts in Photography and have complimented that, with an Advanced Certificate in Graphic Design.
+
+I designed this website and added some of my favourite images for you to enjoy.
+Thank you for visiting and I look forward to capturing beautiful memories with you. <br>
+If you would like to work with me, feel free to contact me via phone at 647.453.8501 or email at nicole.zalba@gmail.com </p1>
 				</div>
 
 				<div class="column">
@@ -81,6 +90,10 @@
 					<p> oranG-Jay</p>
 				<img src="fimg/MFS15.jpg"alt="food1">
 					<p> Timeless</p>
+					<img src="fimg/FRESH.jpg"alt="food1">
+					<p> Feeling Fresh</p>
+					<img src="fimg/April08_03.jpg"alt="food1">
+					<p> Memoir</p>
 			
 
 			</div>
@@ -159,9 +172,12 @@
 				<p> Autumn | Vector Art</p>
 				<img src="fimg/moose.png" alt="wedding01">
 				<p> Moose | Vector Art</p>
-				<img src="fimg/OJ.png" alt="wedding01">
+				<img src="fimg/OJ.png" alt="oj">
 				<p> Business Card Design</p>
-				
+				<img src="fimg/poster.png" alt="casino">
+				<p> Casino Typography Poster</p>
+				<img src="fimg/info.png" alt="wedding01">
+				<p> Social Media Infographic</p>
 				
 
 			
@@ -194,6 +210,15 @@
 				</video>
 				<p> Casino Title Sequence</p>
 			</div>
+
+			<div class="grid">
+				<video width="1500" height="900"  muted autoplay controls="hovered">
+				<source src="vid/720p.mp4" type="video/mp4">
+				</video>
+				<p>Coordinates App Design</p>
+			</div>
+
+			
 			
 	
 </section1>
