--- a/home.html
+++ b/home.html
@@ -242,7 +242,7 @@ If you would like to work with me, feel free to contact me via phone at 647.453.
 
 		
 
-			<a href="https://www.instagram.com/zmpimagery/">
+			<a href="https://www.instagram.com/zmimagery/">
 				<img src="img/instagram.png" alt="instagram">
 			</a>
 			<p1>647.453.8501</p1>
