--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!-- PERSONAL SITE -->
 <!DOCTYPE html>
+
 <head>
 
 	<title>ZM IMAGERY</title>
@@ -29,7 +30,10 @@
 		<a href="#about">About</a>
 		<a href="#Photography">Photography</a>
 		<a href="#design">Design</a>
+		<a href="drone.html">Aerial</a>
 		<a href="#contact">Contact</a>
+
+	
 
 
 	
@@ -54,13 +58,12 @@
 					<h1>hello</h1>
 					<p1> <br>My name is Nicole.<br>
 
-I am a freelance image maker living in the Niagara Region of Ontario Canada.
+I am a freelance image maker living in the Niagara Region of Ontario, Canada.
 
-My passion for image making and capturing special moments began at an early age and I have since acquired a Bachelor of Fine Arts in Photography and have complimented that, with an Advanced Certificate in Graphic Design.
+My passion for image making and capturing special moments began at an early age and I have since acquired a Bachelor of Fine Arts in Photography and have complimented that, with an Advanced Certificate in Graphic Design. I am an adventure enthusiast, and nature influences my work.<br>
 
 I designed this website and added some of my favourite images for you to enjoy.<br>
-Thank you for visiting and I look forward to capturing beautiful memories with you. <br>
-If you would like to work with me, feel free to contact me via phone at 647.453.8501 or email at nicole.zalba@gmail.com </p1>
+For questions and inquiries, feel free to contact me via phone at 647.453.8501 or email at nicole.zalba@gmail.com </p1>
 				</div>
 
 				<div class="column">
@@ -276,3 +279,4 @@ If you would like to work with me, feel free to contact me via phone at 647.453.
 
 
 </body>
+
