--- a/home.html
+++ b/home.html
@@ -90,6 +90,8 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 			<h2>food | still life</h2>
 				<img src="img/feb24_03.jpg"alt="food6">
 				<p> Pieces, Still Life</p>
+				<img src="NI/j3.jpg"alt="food5">
+					<p> Aria</p>
 				<img src="fimg/Feb05_01.jpg"alt="food5">
 					<p> Tea Time, Still Life</p>
 				<img src="fimg/feb25_01.jpg"alt="food4" title="tea"/>
@@ -111,6 +113,10 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 
 			<div class="photo-grid">
 				<h2>portraiture</h2>
+				<img src="NI/j1.jpg"alt="food5">
+					<p> Cheers</p>
+					<img src="NI/j2.jpg"alt="food5">
+					<p> |</p>
 				<img src="img/oct30_jk11.jpg" alt="portrait01" class="wide">
 				<P>Jen & Karen </P>
 				<img src="img/may5-2.jpg" alt="portrait03">
@@ -143,7 +149,8 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 				<img src="pr/p3.jpg" alt="wedding">
 				<img src="pr/p4.jpg" alt="wedding">
 				<img src="pr/p5.jpg" alt="wedding">
-				<img src="pr/p6.jpg" alt="wedding">
+				<img src="pr/p6.jpg" alt="wedding"><img src="NI/j4.jpg"alt="food5">
+					
 			
 
 
