--- a/drone.html
+++ b/drone.html
@@ -64,7 +64,11 @@
 	<p> Portraiture II </p>
 	<img src="dr/dr4.jpeg"alt="drone">
 	<p> Real Estate I</p>
-	
+	<img src="dr/A1.jpg"alt="drone">
+	<p> Winery</p>
+	<img src="dr/A2.jpg"alt="drone">
+	<p> Cheers</p>
+
 <h2> Aerial Videography </h2>
 
 <div class="grid">
