New update oct 3

--- a/home.html
+++ b/home.html
@@ -38,14 +38,25 @@
 
 	
 }
+
 	
 	</nav>
 
 
 	<!-- HEADER BANNER -->
 	<header>
-		<img src="img/lopp.png" alt="ZM IMAGERY">
+		<div class="overlay">
+  <img src="img/lopp.png" alt="ZM IMAGERY"
+		id="logo">
+		<div class="video">
+  <video autoplay muted loop>
+    <source src="vid/dvid1.mp4" type="video/mp4">
+  </video>
+</div>
+
 	</header>
+
+
 
 	<main>
 
