--- a/drone.html
+++ b/drone.html
@@ -3,6 +3,8 @@
 <head>
 
 	<title>ZM IMAGERY</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+
 
 	<link href="styles.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
