--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
 
 	<title>ZM IMAGERY</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+
+
 	<link href="styles.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -124,10 +127,13 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 
 			<div class="photo-grid">
 				<h2>portraiture</h2>
-				<img src="NI/j1.jpg"alt="food5">
+				<img src="img/23.jpg"alt="food5">
 					<p> Cheers</p>
 					<img src="NI/j2.jpg"alt="food5">
 					<p> |</p>
+				<img src="NI/j1.jpg"alt="food5">
+					<p> Cheers</p>
+					
 				<img src="img/oct30_jk11.jpg" alt="portrait01" class="wide">
 				<P>Jen & Karen </P>
 				<img src="img/may5-2.jpg" alt="portrait03">
@@ -144,6 +150,11 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 
 			<div class="photo-grid">
 				<h2>weddings</h2>
+				<img src="img/33.jpg" alt="food" class="wide">
+				<img src="img/9jpg.jpg" alt="food" class="wide">
+				<img src="img/7.jpg" alt="food" class="wide">
+
+
 				<img src="img/wedding04_14.jpg" alt="food" class="wide">
 				<img src="img/wed02_01.jpg" alt="wedding">
 				<img src="img/wed04_12.jpg" alt="wedding01">
@@ -160,7 +171,11 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 				<img src="pr/p3.jpg" alt="wedding">
 				<img src="pr/p4.jpg" alt="wedding">
 				<img src="pr/p5.jpg" alt="wedding">
-				<img src="pr/p6.jpg" alt="wedding"><img src="NI/j4.jpg"alt="food5">
+				<img src="pr/p6.jpg" alt="wedding">
+				<img src="NI/j4.jpg"alt="food5">
+				<img src="img/10.jpg"alt="food5">
+				<img src="img/11.jpg"alt="food5">
+				<img src="img/01.jpg"alt="food5">
 					
 			
 
