--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <head>
 	<title>ZM IMAGERY</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="styles.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
