--- a/drone.html
+++ b/drone.html
@@ -17,6 +17,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <nav>
 
