--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
@@ -55,6 +56,7 @@
   <video autoplay muted loop>
     <source src="vid/dvid1.mp4" type="video/mp4">
   </video>
+
 </div>
 
 	</header>
@@ -269,12 +271,15 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 				<p>Coordinates App Design</p>
 			</div>
 
+
+
+
 			
 			
 	
 </section1>
 
-  
+  	
  
 
 
@@ -286,6 +291,7 @@ For questions and inquiries, feel free to contact me via phone at 647.453.8501 o
 		<section id="contact">
 
 		</section>
+
 
 
 		<!-- FOOTER -->
